--- a/nsw_nn_current.ipynb
+++ b/nsw_nn_current.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Date</th>\n      <th>Demand</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1998-02-01 00:00:00</td>\n      <td>6010</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1998-02-01 00:05:00</td>\n      <td>5990</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1998-02-01 00:10:00</td>\n      <td>6000</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1998-02-01 00:15:00</td>\n      <td>5970</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1998-02-01 00:20:00</td>\n      <td>5960</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>1998-02-01 00:25:00</td>\n      <td>5880</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>1998-02-08 00:00:00</td>\n      <td>6250</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>1998-02-08 00:05:00</td>\n      <td>6280</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>1998-02-08 00:10:00</td>\n      <td>6180</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>1998-02-08 00:15:00</td>\n      <td>6210</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>1998-02-08 00:20:00</td>\n      <td>6160</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 11
     }
    ],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 12
     }
    ],
    "source": [
@@ -130,12 +130,13 @@
     "    dt1 = df[df['Date']==ddt - timedelta(days=0, minutes=5)]['Demand'].iloc[0]\n",
     "\n",
     "    X = np.array([\n",
+    "        # 1 week before\n",
     "        np.log(dt10/dt11),\n",
     "        np.log(dt9/dt10),\n",
     "        np.log(dt8/dt9),\n",
     "        np.log(dt7/dt8),\n",
     "        np.log(dt6/dt7),\n",
-    "\n",
+    "        # 4 dispatch intervals before\n",
     "        np.log(dt4/dt5),\n",
     "        np.log(dt3/dt4),\n",
     "        np.log(dt2/dt3),\n",
@@ -150,15 +151,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "layer_1_weights = np.array([\n",
-    "    np.array([0.787908442, -3.03342919, -0.805006387, -2.24481232, -6.91548304, 1.899275, 1.67724099, 3.34159312, 2.33262311]),\n",
-    "    np.array([-0.280762392, -1.28836905, -1.64200928, -2.93899286, -0.413204144, 2.10931932, -0.0174202002, -0.498683481, 1.10089596]),\n",
-    "    np.array([-0.0541686846, -0.00341524871, 0.662373364, 0.409496988, 2.02470863, -0.140064819, 0.0654530737, 0.0654530737, -1.07629121]),\n",
-    "    np.array([-0.07762109, -0.161543795, 0.344925654, 1.99314546, 0.843839487, 0.648678667, 0.752352854, 1.15456333, 0.839209192]),\n",
+    "    [0.787908442, -3.03342919, -0.805006387, -2.24481232, -6.91548304, 1.899275, 1.67724099, 3.34159312, 2.33262311],\n",
+    "    [-0.280762392, -1.28836905, -1.64200928, -2.93899286, -0.413204144, 2.10931932, -0.0174202002, -0.498683481, 1.10089596],\n",
+    "    [-0.0541686846, -0.00341524871, 0.662373364, 0.409496988, 2.02470863, -0.140064819, 0.0654530737, 0.0654530737, -1.07629121],\n",
+    "    [-0.07762109, -0.161543795, 0.344925654, 1.99314546, 0.843839487, 0.648678667, 0.752352854, 1.15456333, 0.839209192],\n",
     "]).T\n",
     "\n",
     "output_weights = np.array([0.171686888, -0.134112006, 1.06132145, 1.9234954])\n",
@@ -176,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +267,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 17
     }
    ],
    "source": [
