--- a/nsw_nn_current.ipynb
+++ b/nsw_nn_current.ipynb
@@ -27,7 +27,7 @@
     "- Based on AEMO's [Neural Network Documentation](https://aemo.com.au/-/media/files/pdf/so_fd_01__five_minute_electricity_demand_forecasting_neural_network_documentation.pdf)\n",
     "- The model predicts the logarithmic change in demand for the region\n",
     "- The input data, weights, and biases are based on the NSW neural network that is described in the documentation\n",
-    "- Warning: the documentation does some strange things that I have corrected because the author did not understand the difference between weights and biases\n",
+    "- The documentation appears to have combined the weights and biases together in the same table\n",
     "- The neural network is based on this tutorial [video](https://www.youtube.com/playlist?list=PLQVvvaa0QuDcjD5BAw2DxE6OF2tius3V3) series and [book](https://nnfs.io/)"
    ],
    "cell_type": "markdown",
@@ -162,7 +162,7 @@
     "    [-0.07762109,-0.161543795,0.344925654,1.99314546,0.843839487,0.648678667,0.752352854,1.15456333,0.839209192],\n",
     "]).T\n",
     "\n",
-    "output_weights = np.array([0.171686888, -0.134112006, 1.06132145, 1.9234954])\n",
+    "output_weights = np.array([0.171686888,-0.134112006, 1.06132145,1.9234954])\n",
     "\n",
     "layer_1_biases = np.array([-1.18083652,0.912479873,0.168973233,-1.92511602])\n",
     "output_biases = np.array([-0.766221613])"
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 10
     }
    ],
    "source": [
